# PyReimu

./: .gitignore  README.md  generator.py  my_game.toml  pyproject.toml  pyreimu_game.py
pyreimu/: __init__.py  pyreimu.py
pyreimu/engine/: __init__.py  save_file.py
pyreimu/graphics/gui/: canvas.py  uielement.py
pyreimu/graphics/gui/elements/: __init__.py  button.py  image.py  panel.py  save_column.py  slider.py  text.py
resources/saves/: 2.rei
