[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyReimu"
version = "0.0.1"
authors = [
  { name="Emir Cengiz", email="emircengiz21@gmail.com" },
]
description = "A visual novel framework for making prototyping easy."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/elvodqa/PyReimu"
"Bug Tracker" = "hhttps://github.com/elvodqa/PyReimu/issues"